<resources>
    <string name="app_name">astudio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="essay_types">
        <item>Personal</item>
        <item>Supplement</item>
    </string-array>
    <string name="MainMenu">Main Menu</string>
    <string name="MM">Main </string>
    <string name="Title">Title</string>
    <string name="Type">Type</string>
    <string name="Text">Text</string>
    <string name="SubmitEssay">Submit Essay</string>
    <string name="Essays">Essays</string>


</resources>